--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .idea
 *.iml
+target/*
+resources/*
 resources/out/192.168.1.1
 resources/out/192.168.1.1.xml
 resources/out/Niklas_192.168.1.10.xml
